# URL-Shortener

./: .dockerignore  .gitignore  Dockerfile  README.md  beginner_guide.md  docker-compose.yml  production_deep_dive.md  pyproject.toml  requirements.txt
app/: cache.py  config.py  database.py  load_test.py  main.py  models.py  utils.py
app/static/: index.html  script.js  style.css
